Added space entity and references that in all other entities.
Added CRUD methods for space entity.
