# action/route.go
@@ -17,6 +17,7 @@ import (
 	"github.com/factly/bindu-server/action/chart"
 	"github.com/factly/bindu-server/action/medium"
 	"github.com/factly/bindu-server/action/organisation"
+	"github.com/factly/bindu-server/action/space"
 	"github.com/factly/bindu-server/action/tag"
 	"github.com/factly/bindu-server/action/theme"
 	_ "github.com/factly/bindu-server/docs" // docs is generated by Swag CLI, you have to import it.
@@ -48,18 +49,21 @@ func RegisterRoutes() *chi.Mux {
 		fmt.Println("Swagger @ http://localhost:7000/swagger/index.html")
 	}
 
-	r.With(util.GormRequestID, util.CheckUser, util.CheckOrganisation).Group(func(r chi.Router) {
+	r.With(util.GormRequestID, util.CheckUser, util.CheckSpace, util.GenerateOrganisation).Group(func(r chi.Router) {
 		r.Mount("/categories", category.Router())
 		r.Mount("/charts", chart.Router())
 		r.Mount("/media", medium.Router())
 		r.Mount("/organisations", organisation.Router())
 		r.Mount("/tags", tag.Router())
 		r.Mount("/themes", theme.Router())
+		r.Mount("/spaces", space.Router())
 	})
 
 	sqlDB, _ := config.DB.DB()
 	healthx.RegisterRoutes(r, healthx.ReadyCheckers{
 		"database": sqlDB.Ping,
+		"keto":     util.KetoChecker,
+		"kavach":   util.KavachChecker,
 	})
 
 	return r
