# model/category.go
@@ -8,11 +8,12 @@ import (
 // Category model
 type Category struct {
 	config.Base
-	Name           string   `json:"name" validate:"required"`
-	Slug           string   `json:"slug" validate:"required"`
-	Description    string   `json:"description"`
-	OrganisationID uint     `json:"organisation_id"`
-	Charts         []*Chart `gorm:"many2many:chart_category;" json:"charts"`
+	Name        string   `json:"name" validate:"required"`
+	Slug        string   `json:"slug" validate:"required"`
+	Description string   `json:"description"`
+	SpaceID     uint     `gorm:"column:space_id" json:"space_id"`
+	Space       *Space   `json:"space,omitempty"`
+	Charts      []*Chart `gorm:"many2many:chart_category;" json:"charts"`
 }
 
 var categoryUser config.ContextKey = "category_user"
